--- a/datacenter/templates/class_info.html
+++ b/datacenter/templates/class_info.html
@@ -6,10 +6,10 @@
 <body>
   <ul class="nav" style="background-color: #e3f2fd;">
     <li class="nav-item">
-      <a class="nav-link active" href="{% url "classes" %}">На главную</a>
+      <a class="nav-link active" href="{% url 'classes' %}">На главную</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="{% url "schedule" year=year letter=letter%}">К расписанию {{year}}{{letter}}</a>
+      <a class="nav-link active" href="{% url 'schedule' year=year letter=letter%}">К расписанию {{year}}{{letter}}</a>
     </li>
   </ul>
   <div class="container">
